# ArcaneArts

./: Air_user.h  Ash_user.cpp  Ash_user.h  CMakeLists.txt  Earth_user.h  Evoker.cpp  Evoker.h  Fire_user.h  I_Menu.h  I_Print.cpp  I_Print.h  README.md  Spellbook.h  Wizzard.cpp  Wizzard.h  evoker_subclasses.cpp  evoker_subclasses.h  main.cpp  the_arcane_arts.cpp  the_arcane_arts.h
.github/workflows/: c-cpp.yml
cmake_modules/: FindSFML.cmake
headers/: Air_user.h  Evoker.h  Fire_user.h
headers/Characters/: Character.h  Elf.h  Enemy.h  Hero.h  Human.h  Minotaur.h  Slime.h
headers/Game/: Animation.h  AnimationComponent.h  Game.h  GameState.h  State.h
headers/Game/Animations/: Animation.h  AnimationComponent.h
headers/Game/Characters/: Character.h  Enemy.h  EnemySpawner.h  Hero.h
headers/Game/GUI/: Button.h  FPS.h  HealthBar.h  Menu.h  PauseMenu.h  PopMessage.h  ProgressBar.h  TextTag.cpp  TextTag.h  TextTagComponent.h  UpgradeMenu.h
headers/Game/Items/: Item.h
headers/Game/Levels/: Level.h  MinotaurForest.h
headers/Game/States/: GameState.h  State.h
headers/Items/: Sword.h  Weapon.h
headers/old/: Ash_user.h  I_Menu.h
src/: main.cpp
src/Characters/: Character.cpp  Elf.cpp  Enemy.cpp  Hero.cpp  Human.cpp  Minotaur.cpp  Slime.cpp
src/Game/: Animation.cpp  AnimationComponent.cpp  Game.cpp  GameState.cpp  State.cpp
src/Game/Animations/: Animation.cpp  AnimationComponent.cpp
src/Game/Characters/: Character.cpp  Enemy.cpp  EnemySpawner.cpp  Hero.cpp
src/Game/GUI/: Button.cpp  FPS.cpp  HealthBar.cpp  Menu.cpp  PauseMenu.cpp  PopMessage.cpp  ProgressBar.cpp  TextTagComponent.cpp  UpgradeMenu.cpp
src/Game/Items/: Item.cpp  Sword.cpp  Weapon.cpp
src/Game/Levels/: Level.cpp  MinotaurForest.cpp
src/Game/States/: GameState.cpp  State.cpp
src/Items/: Weapon.cpp
